src/test/ui/error-codes/E0271.stderr
error[E0271]: type mismatch resolving `<i8 as Trait>::AssociatedType == u32`
  --> $DIR/E0271.rs:10:5
   |
LL | fn foo<T>(t: T) where T: Trait<AssociatedType=u32> {
   |                                ------------------ required by this bound in `foo`
...
LL |     foo(3_i8);
   |     ^^^ expected `u32`, found `&str`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
